<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.ParkinsonAi.AppBarOverlay" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grad"
                app:popupTheme="@style/Theme.ParkinsonAi.PopupOverlay"
                app:title="HOME"
                app:titleMarginStart="115dp"
                app:titleTextColor="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coordinator"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/square"
            android:text=" Please Read the folllowing vowels (Each 5 seconds): \n \n
1. I I I I I I I I I I I \n
2. E E E E E E E  \n
3. A A A A A A A \n
4. O O O O O O O \n
5. U U U U U U U"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bot_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF"
            app:itemIconTint="#0072C6"
            app:itemTextColor="#000000"
            app:menu="@menu/navigation">

        </com.google.android.material.bottomnavigation.BottomNavigationView>




        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/recordView"
            android:layout_width="397dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="270dp"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/recorder"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/playView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_above="@id/btnsub"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/equalizer" />


        <TextView
            android:id="@+id/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recordView"
            android:layout_marginTop="10dp"
            android:text="1. Press the Record Button to Start!"
            android:textColor="#918F8F" />

        <TextView
            android:id="@+id/step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step1"
            android:layout_marginTop="5dp"
            android:text="2.Read the above Vowels starting from 1 to 5"
            android:textColor="#918F8F" />

        <TextView
            android:id="@+id/step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step2"
            android:layout_marginTop="5dp"
            android:text="3. Stop recording after reading by pressing the button again and press submit!"
            android:textColor="#918F8F" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/bot_View"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#0072C6"
            android:text="Submit"
            android:textColor="@color/white">

        </Button>


        <Button
            android:id="@+id/btnplay"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/bot_View"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#0072C6"
            android:text="Play"
            android:textColor="@color/white">

        </Button>


    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>