...


    <Button
        android:id="@+id/btnsubmit_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bot_View_result"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_round2"
        android:text="Submit to doctor"
        android:textColor="#0072C6">

...
